# 2KNIGHTS

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
include/: 2knighs.hpp  Path.hpp
src/: 2knights.cpp  CMakeLists.txt  Path.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/include/: test_utils.hpp
